[project]
name = "tokensaver"
version = "1.1.0"
description = "LLM API cost optimizer — compression, caching, cost estimation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
